--- a/imc.html
+++ b/imc.html
@@ -140,7 +140,7 @@
     <button id="muteBtn" title="Silenciar/Reproducir música">🔊</button>
   </div>
   <audio id="bgAudio" loop autoplay>
-    <source src="Paz de Mind.mp3" type="audio/mp3">
+    <source src="Peace of Mind.mp3" type="audio/mp3">
     Tu navegador no soporta audio HTML5.
   </audio>
   <form method="post" action="imc.php">
